Switch to antd tooltips

--- a/src/components/Goals/styles/goalbar.scss
+++ b/src/components/Goals/styles/goalbar.scss
@@ -1,5 +1,9 @@
 @import 'styles/constants.scss';
 
+div.ant-tooltip {
+	top: 0px;
+}
+
 .goal-bar-wrapper {
 	display: flex;
 	position: relative;
@@ -46,68 +50,6 @@
 		.goal-filled-bar {
 			background-color: $primary-dark;
 		}
-	}
-	
-	// TOOLTIP
-	$tooltip-background-color: rgba(31,36,41,1);
-	
-	.goal-bar-tooltip {
-		display: none;
-		
-		z-index: 902;
-		position: absolute;
-		right: -32px;
-		top: -20px;
-		min-width: 180px;
-		max-width: 180px;
-		
-		text-align: center;
-		background-color: transparent;
-		
-		.title {
-			font-weight: bold;
-		}
-		
-		&::after {
-			content: "";
-			position: absolute;
-			top: 100%;
-			left: 50%;
-			margin-left: -8px;
-			border-width: 8px;
-			border-style: solid;
-			border-color: $tooltip-background-color transparent transparent transparent;
-		}
-		
-		
-		.goal-hover-text {
-			font-size:14px;
-			line-height: 16px;
-			letter-spacing: 5%;
-			padding-top: 5px;
-			padding-bottom: 2px;
-			color: $elephant-light;
-			background-color: $tooltip-background-color;
-			vertical-align: middle;
-			white-space: nowrap;
-			
-			//color: $elephant-ultra-light;
-			border-radius: 2px;
-			padding-top: 4px;
-			padding-bottom: 4px;
-			padding-left: 14px;
-			padding-right: 14px;
-			box-shadow: rgba(0,0,0,0.3) 0 2px 12px;
-			-webkit-font-smoothing: antialiased;
-			
-			.current-progress {
-				color: $primary-light;
-			}
-		}
-	}
-	
-	&:hover .goal-bar-tooltip {
-		display: inline-block;
 	}
 }
 
