--- a/src/components/ProductionTrends/styles/productiontrends.scss
+++ b/src/components/ProductionTrends/styles/productiontrends.scss
@@ -9,11 +9,21 @@
     .options {
         display: flex;
         justify-content: space-between;
+        margin-left: 28px;
+
+        img {
+            margin-left: 16px;
+        }
+    }
+
+    .production-trends-filters {
+        display: flex;
+        align-items: center;
     }
 
     .ant-select {
         width: 200px;
-        margin-left: 24px;
+        margin-left: 8px;
     }
 
     .buttons {
@@ -48,6 +58,7 @@
         display: flex;
         justify-content: space-between;
         align-items: flex-end;
+        margin-right: 20px;
     }
 
     .activity-link {
