Orient tooltips at left (for entire goalbar component)

--- a/src/components/Goals/styles/goalbar.scss
+++ b/src/components/Goals/styles/goalbar.scss
@@ -15,8 +15,9 @@ div.ant-tooltip {
 		color: $elephant;
 	}
 	
-	&:hover .goal-interval {
+	&:hover, &:hover .goal-interval {
 		color: $primary;
+		cursor: pointer;
 	}
 	
 	.goal-whole-bar {
