Show pointer cursor over goal title

--- a/src/components/Goals/styles/goal.scss
+++ b/src/components/Goals/styles/goal.scss
@@ -28,6 +28,7 @@
 			flex: 1;
 			padding-top: 3px;
 			padding-bottom: 2px;
+			cursor: pointer;
 			
 			span.product {
 				display:inline-block;
