:hammer: Fix minor UI issues

--- a/src/components/Goals/styles/goalssidebar.scss
+++ b/src/components/Goals/styles/goalssidebar.scss
@@ -8,7 +8,7 @@
 	.goal-side-bar-tabs {
 		padding-top: 38px;
 		padding-left: 8px;
-		border-bottom: 1px solid $elephant;
+		border-bottom: 1px solid $elephant-light;
 	}
 	
 	.goals-list-wrapper {
