Fetch/create pins

--- a/src/components/ProductionTrends/styles/productiontrends.scss
+++ b/src/components/ProductionTrends/styles/productiontrends.scss
@@ -13,6 +13,7 @@
 
         img {
             margin-left: 16px;
+            width: 24px;
         }
     }
 
@@ -33,6 +34,7 @@
             display: flex;
             padding: 0 8px;
             margin-left: 12px;
+            height: 32px;
         }
     }
 
