--- a/src/components/Home/styles/home.scss
+++ b/src/components/Home/styles/home.scss
@@ -2,6 +2,8 @@
 
 .dashboard {
 	display: flex;
+	width: 100%;
+	justify-content: space-between;
 	
 	.dash-content {
 		display: flex;
@@ -24,7 +26,6 @@
 		padding-bottom: 0;
 		margin-bottom: 0;
 		box-shadow: $card-shadow;
-		
 
 		.little-header {
 			margin-left: 16px; 
