Make minor styling adjustments

--- a/src/components/Goals/styles/goalssidebar.scss
+++ b/src/components/Goals/styles/goalssidebar.scss
@@ -5,15 +5,20 @@
 	max-width: 260px;
 	background-color: white;
 	
+	& > div {
+	
+	}
+	
 	.goal-side-bar-tabs {
 		padding-top: 38px;
-		padding-left: 8px;
-		border-bottom: 1px solid $elephant-light;
+		padding-left: 20px;
+		border-bottom: 1px solid $elephant-ultra-light;
 	}
 	
 	.goals-list-wrapper {
 		flex: 1;
 		padding-right: 24px;
+		padding-left: 10px;
 	}
 	
 	.goals-zero-state {
