--- a/src/components/Goals/styles/goalssidebar.scss
+++ b/src/components/Goals/styles/goalssidebar.scss
@@ -8,7 +8,7 @@
 	.goal-side-bar-tabs {
 		padding-top: 38px;
 		padding-left: 20px;
-		border-bottom: 1px solid $elephant-ultra-light;
+		border-bottom: 1px solid $gray-ultra-light;
 	}
 	
 	.goals-list-wrapper {
@@ -18,7 +18,7 @@
 		
 		// Scroll-related css
 		height: 700px;
-		padding-bottom: 200px; // So nothing's not covered by help icon
+		padding-bottom: 200px; // So nothing's covered by the help icon
 		overflow: hidden;
 		overflow-y: scroll;
 	}
