Add Goal labels

--- a/src/components/CumulativeAreaChart/styles/cumulativeareachart.scss
+++ b/src/components/CumulativeAreaChart/styles/cumulativeareachart.scss
@@ -24,6 +24,22 @@
         opacity: 0.8;
     }
 
+    .goal-line {
+        stroke: $green;
+        stroke-width: 1.5px;
+    }
+
+    .goal-label {
+        rect {
+            fill: $green;
+        }
+
+        text {
+            fill: white;
+            font-size: 12px;
+        }
+    }
+
     .y-axis-label {
         font-size: 12px;
     }
