--- a/src/components/ProductionTrends/styles/trendslinechart.scss
+++ b/src/components/ProductionTrends/styles/trendslinechart.scss
@@ -34,6 +34,7 @@
     .goal-line {
         stroke: $green;
         stroke-width: 1.5px;
+        stroke-dasharray: 4 4;
     }
 
     .goal-label {
