Set goal scrollable list to EXACTLY fit window :triangular_ruler:

--- a/src/components/Goals/styles/goalssidebar.scss
+++ b/src/components/Goals/styles/goalssidebar.scss
@@ -17,7 +17,7 @@
 		padding-left: 10px;
 		
 		// Scroll-related css
-		height: 700px;
+		//height set in JS
 		padding-bottom: 200px; // So nothing's covered by the help icon
 		overflow: hidden;
 		overflow-y: scroll;
