--- a/src/components/ProductionTrends/styles/pinbutton.scss
+++ b/src/components/ProductionTrends/styles/pinbutton.scss
@@ -3,6 +3,15 @@
 .pin-button {
     display: inline-block;
 
+     button {
+        align-items: center;
+        padding: 0 12px 0 4px;
+    }
+
+    img {
+        width: 24px;
+    }
+
     .unpin {
         background-color: $gray-ultra-light;
         color: $gray-dark;
