--- a/src/components/ProductionTrends/styles/productiontrends.scss
+++ b/src/components/ProductionTrends/styles/productiontrends.scss
@@ -11,11 +11,12 @@
         justify-content: space-between;
         margin-left: 28px;
 
-        img {
-            margin-left: 16px;
-            width: 24px;
-            opacity: 0.7;
-        }
+    }
+
+    .process-product-icon {
+        margin-left: 16px;
+        width: 24px;
+        opacity: 0.7;
     }
 
     .production-trends-filters {
@@ -33,13 +34,13 @@
 
         button {
             display: flex;
-            padding: 0 8px;
             margin-left: 12px;
             height: 32px;
         }
     }
 
     .download {
+        padding: 0 8px;
         background-color: $gray-ultra-light;
         color: $gray-dark;
     }
