--- a/src/components/Home/styles/home.scss
+++ b/src/components/Home/styles/home.scss
@@ -1,17 +1,11 @@
 @import 'styles/constants.scss';
 
 .dashboard {
-	display: flex;
 	width: 100%;
-	justify-content: space-between;
-	
-	.dash-content {
-		display: flex;
 
-		& > div {
-			flex: 1;
-			margin: 0px 0px 32px 32px;
-		}
+	.dashboard-content {
+		display: flex;
+		justify-content: space-between;
 	}
 
 	div.panel {
