--- a/src/components/ProductionTrends/styles/pinbutton.scss
+++ b/src/components/ProductionTrends/styles/pinbutton.scss
@@ -1,19 +1,26 @@
 @import 'styles/constants.scss';
 
 .pin-button {
-    display: inline-block;
-
-     button {
-        align-items: center;
-        padding: 0 12px 0 4px;
-    }
-
+  display: inline-block;
+  min-width: 156px;
+  
+  button {
+    align-items: center;
+  }
+  
+  .pin-content {
+    display: flex;
+    
     img {
-        width: 24px;
+      width: 24px;
+      height: 24px;
+      margin-top: -4px;
+      margin-left: -4px;
     }
-
-    .unpin {
-        background-color: $gray-ultra-light;
-        color: $gray-dark;
-    }
+  }
+  
+  button.unpin {
+    background-color: $gray-ultra-light;
+    color: $gray-dark;
+  }
 }
