--- a/src/components/Goals/styles/goal.scss
+++ b/src/components/Goals/styles/goal.scss
@@ -33,6 +33,10 @@
 		.goal-bars-wrapper {
 			display: flex;
 			flex-direction: column;
+			.pinned-goal-zero-state {
+				font-size: 12px;
+				color: $elephant;
+			}
 		}
 	}
 }
