--- a/src/components/ProductionTrends/styles/productiontrends.scss
+++ b/src/components/ProductionTrends/styles/productiontrends.scss
@@ -68,10 +68,13 @@
     .activity-link {
         display: flex;
         color: $primary;
+        vertical-align: middle;
+        line-height: 20px;
 
         i {
-            font-size: 18px;
-            margin-left: 8px;
+            font-size: 16px;
+            line-height: 20px;
+            margin-right: 6px;
         }
     }
 
