made buttons consistent

--- a/src/components/ProductionTrends/styles/productiontrends.scss
+++ b/src/components/ProductionTrends/styles/productiontrends.scss
@@ -39,10 +39,9 @@
         }
     }
 
-    .download {
-        padding: 0 8px;
-        background-color: $gray-ultra-light;
-        color: $gray-dark;
+    .prod-trends-download {
+        font-size: 20px;
+        line-height: 20px;
     }
 
     .every-month-header {
