--- a/src/components/ProductionTrends/styles/pinbutton.scss
+++ b/src/components/ProductionTrends/styles/pinbutton.scss
@@ -4,23 +4,14 @@
   display: inline-block;
   min-width: 156px;
   
-  button {
-    align-items: center;
-  }
-  
   .pin-content {
     display: flex;
+    line-height: 16px;
     
     img {
-      width: 24px;
-      height: 24px;
-      margin-top: -4px;
-      margin-left: -4px;
+      width: 20px;
+      height: 20px;
+      margin-top: -2px;    
     }
-  }
-  
-  button.unpin {
-    background-color: $gray-ultra-light;
-    color: $gray-dark;
   }
 }
