--- a/src/components/ProductionTrends/styles/productiontrends.scss
+++ b/src/components/ProductionTrends/styles/productiontrends.scss
@@ -42,6 +42,7 @@
     .prod-trends-download {
         font-size: 20px;
         line-height: 20px;
+        margin-top: -2px;
     }
 
     .every-month-header {
