Keep Goals sidebar always on the left on screen resize

--- a/src/components/Home/styles/home.scss
+++ b/src/components/Home/styles/home.scss
@@ -4,8 +4,8 @@
 	width: 100%;
 
 	.dashboard-content {
-		display: flex;
-		justify-content: space-between;
+		position: relative;
+		overflow: hidden;
 	}
 
 	div.panel {
