--- a/src/components/ProductionTrends/styles/productiontrends.scss
+++ b/src/components/ProductionTrends/styles/productiontrends.scss
@@ -1,94 +1,101 @@
 @import 'styles/constants.scss';
 
-.production-trends {
+.production-trends-wrapper {
     padding-top: 28px;
     margin-bottom: 80px;
     z-index: 0;
-    max-width: 916px;
-
-    .options {
-        display: flex;
-        justify-content: space-between;
-        margin-left: 12px;
-        margin-right: 50px;
-    }
-
-    .process-product-icon {
-        margin-left: 16px;
-        width: 24px;
-        opacity: 0.7;
-    }
-
-    .production-trends-filters {
-        display: flex;
-        align-items: center;
-    }
-
-    .ant-select {
-        width: 200px;
-        margin-left: 8px;
-    }
-
-    .buttons {
-        display: inline-flex;
-
-        button {
+    // Extra width enables you to scroll the full width of Production Trends when the screen is so
+    // small that GoalSideBar overlaps with it
+    min-width: 1176px; // 916 + 260 sidebar
+    
+    // If screen gets to small, make content x-scrollable
+    overflow-y: scroll;
+    
+    .production-trends {
+        .options {
             display: flex;
+            justify-content: space-between;
             margin-left: 12px;
-            height: 32px;
+            margin-right: 50px;
         }
-    }
-
-    .prod-trends-download {
-        font-size: 20px;
-        line-height: 20px;
-        margin-top: -2px;
-    }
-
-    .every-month-header {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        padding-right: 18px;
-        margin-bottom: 12px;
-    }
-
-    .cumulatives {
-        display: flex;
-        margin-top: 32px;
-    }
-
-    .step-chart-subtitle {
-        display: flex;
-        justify-content: space-between;
-        align-items: flex-end;
-        margin-right: 48px;
-    }
-
-    .activity-link {
-        display: flex;
-        color: $primary;
-        vertical-align: middle;
-        line-height: 20px;
-
-        i {
-            font-size: 16px;
+        
+        .process-product-icon {
+            margin-left: 16px;
+            width: 24px;
+            opacity: 0.7;
+        }
+        
+        .production-trends-filters {
+            display: flex;
+            align-items: center;
+        }
+        
+        .ant-select {
+            width: 200px;
+            margin-left: 8px;
+        }
+        
+        .buttons {
+            display: inline-flex;
+            
+            button {
+                display: flex;
+                margin-left: 12px;
+                height: 32px;
+            }
+        }
+        
+        .prod-trends-download {
+            font-size: 20px;
             line-height: 20px;
-            margin-right: 6px;
+            margin-top: -2px;
         }
-    }
-
-    .trends-subtitle {
-        font-size: 14px;
-        margin-top: 4px;
-        margin-left: 48px;
-        display: flex;
-        color: $black;
-        -webkit-font-smoothing: antialiased;
-    }
-
-    .trends-content {
-        margin-left: 12px;
-        margin-top: 32px;
+        
+        .every-month-header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding-right: 18px;
+            margin-bottom: 12px;
+        }
+        
+        .cumulatives {
+            display: flex;
+            margin-top: 32px;
+        }
+        
+        .step-chart-subtitle {
+            display: flex;
+            justify-content: space-between;
+            align-items: flex-end;
+            margin-right: 48px;
+        }
+        
+        .activity-link {
+            display: flex;
+            color: $primary;
+            vertical-align: middle;
+            line-height: 20px;
+            
+            i {
+                font-size: 16px;
+                line-height: 20px;
+                margin-right: 6px;
+            }
+        }
+        
+        .trends-subtitle {
+            font-size: 14px;
+            margin-top: 4px;
+            margin-left: 48px;
+            display: flex;
+            color: $black;
+            -webkit-font-smoothing: antialiased;
+        }
+        
+        .trends-content {
+            margin-left: 12px;
+            margin-top: 32px;
+        }
     }
 }
