shadow at bottom of goals card

--- a/src/components/ProductionTrends/styles/productiontrends.scss
+++ b/src/components/ProductionTrends/styles/productiontrends.scss
@@ -2,7 +2,7 @@
 
 .production-trends-wrapper {
     padding-top: 28px;
-    margin-bottom: 80px;
+    padding-bottom: 80px;
     z-index: 0;
     overflow-x: scroll;
     
