Disable link to Production Trends for delete process (temporary measure for release)

--- a/src/components/Activity/styles/activitylist.scss
+++ b/src/components/Activity/styles/activitylist.scss
@@ -56,6 +56,12 @@
         flex: 1;
         visibility: hidden;
         height: 26px;
+        width: 43.5px;
+        
+        &.trashed-process {
+            pointer-events: none;
+            cursor: default;
+        }
     }
 
 }
