--- a/src/components/Account/styles/account.scss
+++ b/src/components/Account/styles/account.scss
@@ -21,7 +21,7 @@
 	}
 }
 
-.account-basics, .account-integrations, .account-team {
+.account-basics, .account-integrations, .account-team .factory-options {
 	margin-bottom: 50px;
 }
 
@@ -93,6 +93,21 @@
 	.integration-detail {
 		color: #9A9A9A;
 		line-height: 20px;
+	}
+}
+
+.factory-options {
+	.selectable-label-images {
+		display: flex;
+		flex-direction: row;
+		margin-top: 8px;
+		.label-image {
+			flex: 1;
+			cursor: pointer;
+			&.selected {
+				border: 4px solid skyblue;
+			}
+		}
 	}
 }
 
