--- a/src/components/Account/styles/account.scss
+++ b/src/components/Account/styles/account.scss
@@ -105,7 +105,7 @@
 		.label-image {
 			flex: 0;
 			cursor: pointer;
-			padding-right: 16px;
+			margin-right: 16px;
 			
 			img {
 				width: 135px;
