--- a/src/components/Account/styles/account.scss
+++ b/src/components/Account/styles/account.scss
@@ -108,8 +108,13 @@
 			margin-right: 16px;
 			
 			img {
-				width: 135px;
+				
+				min-width: 135px;
+				max-width: 135px;
+				min-height: 90px;
+				max-height: 90px;
 				border-radius: 6%;
+				border: 2px solid white;
 			}
 			
 			&.selected > img {
