--- a/src/components/ProcessAttribute/styles/processattribute.scss
+++ b/src/components/ProcessAttribute/styles/processattribute.scss
@@ -11,6 +11,15 @@
 	.process-attr-name {
 		color: $gray-dark;
 	}
+	
+	.recurrent-label {
+		flex: 1;
+		color: $gray-light;
+		&.hidden {
+			visibility: hidden;
+		}
+		
+	}
 }
 
 .process-attr-selected, .process-attribute-new  {
@@ -30,4 +39,4 @@
 	.recurrent-checkbox {
 		padding-bottom: 16px;
 	}
-	}
+}
