--- a/src/components/TaskPage/styles/taskform.scss
+++ b/src/components/TaskPage/styles/taskform.scss
@@ -16,6 +16,7 @@
         display: flex;
         align-items: center;
         height: 38px;
+        margin-left: 24px;
 
         .switch {
             height: 16px;
