--- a/src/components/TaskPage/styles/taskrecurrentattribute.scss
+++ b/src/components/TaskPage/styles/taskrecurrentattribute.scss
@@ -21,5 +21,13 @@
         }
     }
     
+    .attribute-zero-state {
+        background-color: rgba(0,0,0,0.05);
+        border-radius: 4px;
+        padding: 8px;
+        text-align: center;
+        color: rgba(0,0,0,0.3);
+    }
+    
 }
 
