--- a/src/components/TaskPage/styles/taskform.scss
+++ b/src/components/TaskPage/styles/taskform.scss
@@ -1,7 +1,10 @@
 @import 'styles/constants.scss';
+$task-form-width: 500px;
+$peripherals-width: 100px; // Peripherals will flex to fit this
 
 .task-form {
-    max-width: 636px;
+    max-width: $task-form-width;
+    min-width: $task-form-width;
 
     .form-label {
         color: $elephant;
@@ -26,9 +29,14 @@
 
     .input-container {
         position: relative;
+        display: flex;
+        max-height: 38px;
     }
 
     .input-container input {
+        max-width: $task-form-width - $peripherals-width;
+        min-width: $task-form-width - $peripherals-width;
+        
         &.attr-error {
             border-color: $red;
         }
