--- a/src/components/TaskPage/styles/taskfiledropzone.scss
+++ b/src/components/TaskPage/styles/taskfiledropzone.scss
@@ -1,26 +1,28 @@
 @import 'styles/constants.scss';
 
-.dropzone {
-    color: #C0C0C0;
-    height: 90px;
-    border: dashed 2px #DBDBDB;
-    border-radius: 3px;
-    background-color: #EBEBEB;
-    text-align: center;
-    padding: 14px 40px;
-    margin-top: 50px;
-    font-size: 12px;
-    line-height: 14px;
+.dropzone-container {
+    .dropzone {
+        color: #C0C0C0;
+        height: 90px;
+        border: dashed 2px #DBDBDB;
+        border-radius: 2px;
+        background-color: #EBEBEB;
+        text-align: center;
+        padding: 14px 40px;
+        margin-top: 50px;
+        font-size: 12px;
+        line-height: 14px;
 
-    div {
-        margin-top: 7px;
+        div {
+            margin-top: 8px;
+        }
     }
-}
 
-.active {
-    border: solid 2px rgb(144, 214, 147);
-}
+    .active {
+        border: solid 2px #66CC66;
+    }
 
-.file-list {
-    margin-top: 22px;
+    .file-list {
+        margin-top: 22px;
+    }
 }
