add category data

--- a/src/components/Processes/styles/createprocessdialog.scss
+++ b/src/components/Processes/styles/createprocessdialog.scss
@@ -32,5 +32,13 @@
             flex: 4;
         }
     }
+
+    .process-category {
+        display: flex;
+
+        .select {
+            flex: 1;
+        }
+    }
 }
 
