Front end for cost related inventory changes
- added actions for aggregate data (redux)
- formatting cost to display on inventory screen
- cost bar

--- a/src/components/Inventory/styles/inventorylistrow.scss
+++ b/src/components/Inventory/styles/inventorylistrow.scss
@@ -36,7 +36,7 @@
     }
 
     .inv-category {
-        flex: 2;
+        flex: 1.5;
     }
 
     .inv-code {
@@ -44,6 +44,10 @@
     }
 
     .inv-amount {
+        flex: 1.5;
+    }
+
+    .inv-cost {
         flex: 1;
     }
 
