--- a/src/components/Inventory/styles/inventoryfilters.scss
+++ b/src/components/Inventory/styles/inventoryfilters.scss
@@ -15,5 +15,34 @@
             display: flex;
             flex-grow: 1;
         }
+
+        .aggregate-cost-bar {
+            margin-right: 34px;
+            flex: 1;
+            height: 30px;
+            display: flex;
+            flex-direction: row;
+            border: solid $gray-light 1px;
+            background-color: #e6e6e6;
+            border-radius: 4px;
+            
+            .cost-item {
+                border-right: solid $gray-light 1px;
+                cursor: pointer;
+
+                &:first-child {
+                    border-radius: 3px 0 0 3px;
+                }
+
+                &:last-child {
+                    border-right: none;
+                    border-radius: 0 3px 3px 0;
+                }
+
+                &:hover {
+                    box-shadow: inset 0 0 0 500px rgba(0,0,0,0.05);
+                }
+            }
+        }
     }
 }
