--- a/src/components/Inventory/styles/inventoryfilters.scss
+++ b/src/components/Inventory/styles/inventoryfilters.scss
@@ -43,6 +43,10 @@
                     box-shadow: inset 0 0 0 500px rgba(0,0,0,0.05);
                 }
             }
+
+            .spinner-container {
+                margin-top: 4px;
+            }
         }
     }
 }
