Update aggregate cost when there is an inventory adjustment

--- a/src/components/Inventory/styles/inventoryfilters.scss
+++ b/src/components/Inventory/styles/inventoryfilters.scss
@@ -46,6 +46,7 @@
 
             .spinner-container {
                 margin-top: 4px;
+                margin: 4px auto 0 auto;
             }
         }
     }
