--- a/src/components/ProductionPlanning/styles/productionplanning.scss
+++ b/src/components/ProductionPlanning/styles/productionplanning.scss
@@ -17,6 +17,26 @@
 				display: flex;
 				flex-direction: row;
 			}
+
+			.work-in-progress-list-container {
+				padding: 22px;
+				background-color: white;
+				box-shadow: $shadow-2;
+			}
+
+			.content-title {
+				font-weight: bold;
+				margin-bottom: 22px;
+			}
+
+			.object-list-header {
+				border-top: none;
+				padding: 0 36px 0 36px;
+			}
+
+			.object-list-item {
+				padding: 0 36px 0 36px;
+			}
 		}
 	}
 }
