--- a/src/components/ProductionPlanning/styles/productionaside.scss
+++ b/src/components/ProductionPlanning/styles/productionaside.scss
@@ -3,17 +3,27 @@
 .production-aside-container {
     flex: 1;
     background-color: white;
-    padding: 30px 20px 20px 20px;
+    padding: 30px 20px 200px 20px;
 
     .title {
         font-weight: bold;
         margin-bottom: 20px;
     }
 
-    .item-container {
+    .goal-container {
         background-color: white;
-        box-shadow: $shadow-2;
-        margin-bottom: 10px;
+        box-shadow: $shadow-1;
+        margin-bottom: 12px;
+        cursor: pointer;
+
+        .outer-progress-bar {
+            background-color: $gray-ultra-light;
+
+            .inner-progress-bar {
+                background-color: $primary;
+                height: 6px;
+            }
+        }
 
         .content-container {
             padding: 8px 20px 20px 20px;
@@ -22,10 +32,11 @@
                 display: flex;
                 flex-direction: row;
 
-                .title {
+                .goal-title {
                     flex: 3;
-                    font-size: 16px;
-                    color: $gray;
+                    font-size: 15px;
+                    color: $black;
+                    margin: 6px 0 10px 0;
                 }
 
                 .warning {
