--- a/src/components/ProductionPlanning/styles/rawmaterialtimeline.scss
+++ b/src/components/ProductionPlanning/styles/rawmaterialtimeline.scss
@@ -62,4 +62,15 @@
         font-size: 12px;
         font-weight: bold;
     }
+
+    .not-enough-usage-data {
+        font-size: 12px;
+        font-style: italic;
+        fill: $elephant;
+        paint-order: stroke;
+        stroke: $background-color;
+        stroke-width: 6;
+        stroke-linecap: butt;
+        stroke-linejoin: miter;
+    }
 }
