Added tooltips and category column

--- a/src/components/ProductionPlanning/styles/inprogresslistrow.scss
+++ b/src/components/ProductionPlanning/styles/inprogresslistrow.scss
@@ -36,7 +36,11 @@
     }
 
     .inv-product {
-        flex: 4;
+        flex: 3;
+    }
+
+    .inv-category {
+        flex: 3;
     }
 
     .inv-in-stock{
