--- a/src/components/ProductionPlanning/styles/inprogresslistrow.scss
+++ b/src/components/ProductionPlanning/styles/inprogresslistrow.scss
@@ -43,11 +43,22 @@
         flex: 3;
     }
 
-    .inv-in-stock{
+    .inv-in-stock {
         flex: 4;
     }
 
-    .inv-can-make{
+    .inv-can-make {
         flex: 4;
+    }
+
+    .inv-warning {
+        flex: 1;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        img {
+            height: 20px;
+            width: 20px;
+        }
     }
 }
