--- a/src/components/ProductionPlanning/styles/productionaside.scss
+++ b/src/components/ProductionPlanning/styles/productionaside.scss
@@ -10,7 +10,7 @@
         margin-bottom: 20px;
     }
 
-    .goal-container {
+    .aside-item-container {
         background-color: white;
         box-shadow: $shadow-1;
         margin-bottom: 12px;
@@ -32,7 +32,7 @@
                 display: flex;
                 flex-direction: row;
 
-                .goal-title {
+                .title {
                     flex: 3;
                     font-size: 15px;
                     color: $black;
