Some more PR changes
- Fixed inProgress list sorting
- Aside now samples last month rather than last 30 days :calendar:
- Removed bars and centered "no recent usage data" text if all rm have no recent usage data

--- a/src/components/ProductionPlanning/styles/rawmaterialtimeline.scss
+++ b/src/components/ProductionPlanning/styles/rawmaterialtimeline.scss
@@ -73,4 +73,8 @@
         stroke-linecap: butt;
         stroke-linejoin: miter;
     }
+
+    .not-enough-usage-data.all {
+        text-anchor: middle;
+    }
 }
