--- a/src/styles/constants.scss
+++ b/src/styles/constants.scss
@@ -68,3 +68,7 @@ $object-list-left-padding: 36px;
 $object-list-right-padding: 36px;
 $task-page-top-padding: 36px;
 
+
+//-------- Task Page Layout
+$task-form-width: 500px;
+$peripherals-width: 100px; // Peripherals will flex to fit this
