Use better regex, display red :red_circle: Tag if value is invalid

--- a/src/components/TaskPage/styles/taskmain.scss
+++ b/src/components/TaskPage/styles/taskmain.scss
@@ -78,6 +78,7 @@ $container-width: $task-form-width - $peripherals-width; // This is the width of
         .task-cogs-row {
             display: flex;
             flex-direction: row;
+            align-items: center;
 	
 						div.info {
 							display: flex;
