--- a/src/components/Inventory/styles/inventory.scss
+++ b/src/components/Inventory/styles/inventory.scss
@@ -3,6 +3,33 @@
 .inventory-container {
 	width: calc(100vw - #{$nav-width});
 	height: fit-content;
+	
+	.inventory-page-help-container {
+		display: flex;
+		flex-direction: column;
+		align-items: flex-end;
+		margin-right: 24px;
+		margin-bottom: 76px;
+		margin-top: -88px;
+	}
+	
+	.inventory-page-help {
+		background-color: $primary;
+		margin-bottom: 24px;
+		color: white;
+		padding: 12px;
+		border-radius: 8px;
+		width: 400px;
+		cursor: pointer;
+	}
+	
+	.inventory-page-help-header {
+		font-weight: bold;
+		padding-bottom: 12px;
+	}
+	.inventory-page-help-link {
+		font-weight: bold;
+	}
 }
 
 .inventory-content {
